Setup DB, HttpClient and DI

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ android {
 
 dependencies {
 
+    implementation project(path: ':domain')
+
     // Android
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
