--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.3.0'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
     // Hilt (DI)
     implementation("com.google.dagger:hilt-android:2.44")
