--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ android {
 dependencies {
 
     implementation project(path: ':domain')
+    implementation project(path: ':data')
 
     // Android
     implementation 'androidx.core:core-ktx:1.9.0'
